pandas-py3_x-sid-sparc/log-shell_4-stdio
734:2xvfb-run --auto-servernum '--server-args=-screen 0 1024x768x24' nosetests --verbosity=3 --exe -s pandas
 in dir /home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv (timeout 7200 secs)
 watching logfiles {}
 argv: ['xvfb-run', '--auto-servernum', '--server-args=-screen 0 1024x768x24', 'nosetests', '--verbosity=3', '--exe', '-s', 'pandas']
 environment:
  HOME=/home/buildslave
  LOGNAME=buildslave
  MAIL=/var/mail/buildslave
  PATH=/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
  PWD=/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv
  SHELL=/bin/sh
  TERM=xterm
  USER=buildslave
 using PTY: False
,1918:0nose.config: INFO: Ignoring files matching ['^\\.', '^_', '^setup\\.py$']
Failure: SyntaxError (invalid syntax (index.py, line 811)) ... ERROR

======================================================================
ERROR: Failure: SyntaxError (invalid syntax (index.py, line 811))
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/nose/failure.py", line 38, in runTest
    raise self.exc_val.with_traceback(self.tb)
  File "/usr/lib/python3/dist-packages/nose/loader.py", line 402, in loadTestsFromName
    module = resolve_name(addr.module)
  File "/usr/lib/python3/dist-packages/nose/util.py", line 311, in resolve_name
    module = __import__('.'.join(parts_copy))
  File "/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv/lib/python3.2/site-packages/pandas-0.12.0_188_g4493bf3-py3.2-linux-sparc64.egg/pandas/__init__.py", line 25, in <module>
    import pandas.core.config_init
  File "/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv/lib/python3.2/site-packages/pandas-0.12.0_188_g4493bf3-py3.2-linux-sparc64.egg/pandas/core/config_init.py", line 4, in <module>
    from pandas.core.format import detect_console_encoding
  File "/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv/lib/python3.2/site-packages/pandas-0.12.0_188_g4493bf3-py3.2-linux-sparc64.egg/pandas/core/format.py", line 9, in <module>
    from pandas.core.index import Index, MultiIndex, _ensure_index
  File "/home/buildslave/nd-bb-slave-sparc-sid/pandas-py3_x-sid-sparc/build/venv/lib/python3.2/site-packages/pandas-0.12.0_188_g4493bf3-py3.2-linux-sparc64.egg/pandas/core/index.py", line 811
    except KeyError, e1:
                   ^
SyntaxError: invalid syntax

----------------------------------------------------------------------
Ran 1 test in 0.019s

FAILED (errors=1)
,56:2program finished with exit code 1
elapsedTime=4.686206
,